# ncline

./: CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
.github/workflows/: codeql-analysis.yml  linux.yml  macos.yml  mingw.yml  windows.yml
cmake/: clipp.cmake  clipp_download.in  cpptoml.cmake  cpptoml_download.in  generated_sources.cmake  get_version.cmake  installation.cmake
src/: BuildMode.cpp  BuildMode.h  CMakeCommand.cpp  CMakeCommand.h  ConfMode.cpp  ConfMode.h  Configuration.cpp  Configuration.h  DistMode.cpp  DistMode.h  DownloadMode.cpp  DownloadMode.h  FileSystem.cpp  FileSystem.h  GitCommand.cpp  GitCommand.h  Helpers.cpp  Helpers.h  Process.cpp  Process.h  Settings.cpp  Settings.h  main.cpp
